<resources>
    <string name="app_name">Homework4</string>
    <string name="your_grade_is">Your grade is:</string>
    <string name="please_enter_your_test_scores">Please enter your test scores:</string>
    <string name="please_select_your_student_type">Please select your student type:</string>
    <string name="calculate_grade">CALCULATE GRADE</string>
    <string name="graduate">Graduate</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="test_2">Test 2:</string>
    <string name="test_1">Test 1:</string>
    <string name="return_button">RETURN</string>
</resources>