<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:layout_marginTop="32dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_test_scores"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_1"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextScore1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_2"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextScore2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_student_type"
        android:textSize="20sp"
        android:layout_marginTop="32dp" />

    <RadioGroup
        android:id="@+id/radioGroupStudentType"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="32dp">

        <RadioButton
            android:id="@+id/radioButtonUndergraduate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/undergraduate"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonGraduate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graduate"
            android:textSize="16sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonCalculateGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/calculate_grade" />

</LinearLayout>
